--- a/Blockly/index.html
+++ b/Blockly/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/pyodide/v0.23.4/full/pyodide.js"></script>
   <script src="https://unpkg.com/blockly/blockly.min.js"></script>
   <script src="https://unpkg.com/blockly/python_compressed.js"></script>
-  <link rel="stylesheet" href="style.css">
+  <link href="./style.css" rel="stylesheet">
+  </style>
 </head>
 <body>
   <div class="container">
@@ -61,12 +63,9 @@
     </category>
     <category name="Variables" colour="330" custom="VARIABLE"></category>
     <category name="Functions" colour="290" custom="PROCEDURE"></category>
-    <category name="Misty" colour="200">
+    <category name="Custom" colour="200">
       <block type="custom_function"></block>
       <block type="misty_drive"></block>
-      <block type="setLED"></block>
-      <block type="say"></block>
-      <block type="turnLeft"></block>
     </category>
   </xml>
   
@@ -93,52 +92,7 @@
         "args0":[{"type": "field_input", "name":"Blocks","Check":"Number"}],
         "previousStatement": null,
         "nextStatement": null,
-        "colour": 200
-      },
-      {
-        "type": "setLED",
-        "message0": "LEDs auf %1",
-        "args0":[
-          {
-            "type":"field_colour", 
-            "name":"COLOUR", 
-            "colour":"ff4040",
-            "colourOptions":[
-              "#ff4040",
-              "#D7D9CE",
-              "#820263",
-              "#C97B84",
-              "#3B413C",
-              "#BDD2A6",
-              "#ECA72C",
-              "#FF5D73"
-            ],
-            "colourTitles":[
-              "Rot",
-              "Grau",
-              "Magenta",
-              "dunkel Rosa",
-              "Olive",
-              "Grün",
-              "Gelb",
-              "helles Pink"
-            ],
-            "columns": 2,
-          },
-        ],
-        "colour": 200
-      },
-      {
-        "type":"say",
-        "message0": "Sage: \" %1 \"",
-        "args0":[
-          {
-            "type": "field_input",
-            "name": "Value",
-            "check": "String"
-          }
-        ],
-        "colour": 200
+        "colour": 300
       }
     ]);
 
