--- a/Blockly/index.html
+++ b/Blockly/index.html
@@ -67,6 +67,9 @@
     <category name="Custom" colour="200">
       <block type="custom_function"></block>
       <block type="misty_drive"></block>
+      <block type="rotate"></block>
+      <block type="forward"></block>
+      <block type="getKorn"></block>
     </category>
   </xml>
   
@@ -91,6 +94,27 @@
         "type": "misty_drive",
         "message0": "drive %1 Block",
         "args0":[{"type": "field_input", "name":"Blocks","Check":"Number"}],
+        "previousStatement": null,
+        "nextStatement": null,
+        "colour": 300
+      }, 
+      {
+        "type": "rotate",
+        "message0": "drehe 90 Grad nach links",
+        "previousStatement": null,
+        "nextStatement": null,
+        "colour": 300
+      }, 
+      {
+        "type": "forward",
+        "message0": "fahre einen Block nach vorne",
+        "previousStatement": null,
+        "nextStatement": null,
+        "colour": 300
+      }, 
+      {
+        "type": "getKorn",
+        "message0": "nimm das Korn",
         "previousStatement": null,
         "nextStatement": null,
         "colour": 300
