Frontend Gefixt (Credits Gordlby)

--- a/Blockly/index.html
+++ b/Blockly/index.html
@@ -8,8 +8,8 @@
   <link href="./style.css" rel="stylesheet">
   </style>
 </head>
-<body>
-  <div class="container">
+<body style="height: 100vh;">
+  <div class="container" id="mainContainer">
     <div id="blocklyDiv"></div>
     <div id="codeContainer">
       <div>
@@ -66,7 +66,7 @@
     <category name="Functions" colour="290" custom="PROCEDURE"></category>
     <category name="Custom" colour="200">
       <block type="custom_function"></block>
-      <block type="misty_drive"></block>
+      <block type="forward_fuer"></block>
       <block type="rotate"></block>
       <block type="forward"></block>
       <block type="getKorn"></block>
